commentaires mis à jour

--- a/Recommandation_Model.ipynb
+++ b/Recommandation_Model.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Créer un modèle prédictif"
+    "# Créer un modèle prédictif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ajout des moyennes des caractéristiques des playlists au dataset"
+    "## Charger le dataset préparé"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,11 +311,11 @@
     "X = spotify_data[numeric_columns]\n",
     "song_cluster_pipeline.fit(X)\n",
     "\n",
-    "# Predict cluster labels for each song\n",
+    "# Prédire le cluster pour chaque chanson\n",
     "spotify_data['cluster_label'] = song_cluster_pipeline.predict(X)\n",
     "\n",
     "\n",
-    "# Count the number of songs in each cluster for each playlist\n",
+    "# Enregistrer la distribution des chansons dans les clusters pour chaque playlist\n",
     "playlist_cluster_distribution = spotify_data.groupby(['playlistname', 'cluster_label']).size().unstack(fill_value=0)\n",
     "\n",
     "\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -14710,43 +14710,49 @@
     }
    ],
    "source": [
-    "# recommander une playlist à partir du nom d'une playliste.\n",
-    "def recommend_playlist_with_playlist(playlist_name, spotify_data, playlist_cluster_distribution):\n",
-    "    # Retrieve the songs in the given playlist\n",
-    "    playlist_songs = spotify_data[spotify_data['playlistname'] == playlist_name]\n",
-    "    \n",
-    "    # Get the cluster labels for the songs in the playlist\n",
-    "    playlist_cluster_labels = playlist_songs['cluster_label']\n",
-    "    \n",
-    "    # Calculate the distribution of clusters in the playlist\n",
-    "    playlist_cluster_dist = playlist_cluster_labels.value_counts().reindex(range(20), fill_value=0)\n",
+    "# Recommander une playlist à partir du nom d'une playliste.\n",
+    "def recommend_playlist_with_playlist(playlist_name, playlist_cluster_distribution):\n",
+    "    # Récupérer la distribution des clusters pour la playlist cible\n",
+    "    if playlist_name not in playlist_cluster_distribution.index:\n",
+    "        print(f\"La playlist '{playlist_name}' n'est pas présente dans le dataset.\")\n",
+    "\n",
+    "    playlist_cluster_dist = playlist_cluster_distribution.loc[playlist_name].values\n",
     "    \n",
     "    closest_playlist = None\n",
     "    closest_distance = float('inf')\n",
+    "    \n",
+    "    # Chercher la playlist la plus proche\n",
     "    for playlist in playlist_cluster_distribution.index:\n",
-    "        # Get the distribution of clusters for the existing playlist\n",
-    "        existing_playlist_dist = playlist_cluster_distribution.loc[playlist].values\n",
+    "        if playlist == playlist_name:\n",
+    "            continue \n",
     "        \n",
-    "        # Calculate the distance between the distributions\n",
-    "        distance = euclidean(playlist_cluster_dist, existing_playlist_dist)\n",
+    "        # Obtenir la distribution des clusters pour chaque playlist\n",
+    "        other_playlist_dist = playlist_cluster_distribution.loc[playlist].values\n",
+    "        \n",
+    "        # Calculer la distance entre les distributions\n",
+    "        distance = euclidean(playlist_cluster_dist, other_playlist_dist)\n",
     "        \n",
     "        print(f\"Distance to {playlist}: {distance}\")\n",
     "        \n",
-    "        if distance < closest_distance and playlist != playlist_name:\n",
+    "        if distance < closest_distance:\n",
     "            closest_distance = distance\n",
     "            closest_playlist = playlist\n",
     "    \n",
     "    return closest_playlist\n",
     "\n",
     "\n",
-    "# recommander une playlist à partir d'une liste de chansons.\n",
+    "\n",
+    "\n",
+    "# Recommander une playlist à partir d'une liste de chansons.\n",
     "def recommend_playlist(song_list, spotify_data, playlist_cluster_distribution):\n",
     "    \n",
+    "    # Récupérer les clusters de chaque chanson de la liste\n",
     "    song_clusters = spotify_data[spotify_data['trackname'].isin(song_list)]['cluster_label']\n",
     "    \n",
+    "    # Calculer la distribution des clusters\n",
     "    song_cluster_dist = song_clusters.value_counts().reindex(range(20), fill_value=0)\n",
     "    \n",
-    "    \n",
+    "    # Chercher la distribution la plus similaire\n",
     "    closest_playlist = None\n",
     "    closest_distance = float('inf')\n",
     "    for playlist in playlist_cluster_distribution.index:\n",
@@ -14786,7 +14792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -14858,7 +14864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -14873,7 +14879,6 @@
       "Distance to C418: 7.54983443527075\n",
       "Distance to Chelsea: 22.693611435820433\n",
       "Distance to Chill out: 57.79273310719956\n",
-      "Distance to Classique: 0.0\n",
       "Distance to Daft Punk : 41.13392760240627\n",
       "Distance to December 2013: 47.38143096192854\n",
       "Distance to Disney..: 21.071307505705477\n",
@@ -14903,7 +14908,7 @@
     }
    ],
    "source": [
-    "recommended_playlist = recommend_playlist_with_playlist(\"Classique\", spotify_data, playlist_cluster_distribution)\n",
+    "recommended_playlist = recommend_playlist_with_playlist(\"Classique\", playlist_cluster_distribution)\n",
     "print(f\"The recommended playlist is: {recommended_playlist}\")"
    ]
   },
@@ -14916,7 +14921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14927,14 +14932,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The random recommended playlist is: Fluff\n"
+      "The random recommended playlist is: tove's spamlista (okok)\n"
      ]
     }
    ],
@@ -14952,7 +14957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
