--- a/Recommandation_Model.ipynb
+++ b/Recommandation_Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +323,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recommend Playlists"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -14792,7 +14799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -14864,7 +14871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -14916,30 +14923,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Créer un modèle de recommandation aléatoire"
+    "### Recommend songs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend_random_playlist(spotify_data):\n",
-    "    random_playlist = random.choice(spotify_data['playlistname'].unique())\n",
-    "    return random_playlist"
+    "def get_song_data(song, spotify_data):\n",
+    "    song_data = spotify_data[(spotify_data['trackname'] == song['trackname']) \n",
+    "                            & (spotify_data['year'] == song['year'])].iloc[0]\n",
+    "    return song_data\n",
+    "\n",
+    "def get_mean_vector(song_list, spotify_data):\n",
+    "    song_vectors = []\n",
+    "    for song in song_list:\n",
+    "        song_data = get_song_data(song, spotify_data)\n",
+    "        if song_data is None:\n",
+    "            print('Warning: {} does not exist in Spotify or in database'.format(song['trackname']))\n",
+    "            continue\n",
+    "        song_vector = song_data[numeric_columns].values\n",
+    "        song_vectors.append(song_vector)  \n",
+    "    song_matrix = np.array(list(song_vectors))\n",
+    "    return np.mean(song_matrix, axis=0)\n",
+    "\n",
+    "def flatten_dict_list(dict_list):\n",
+    "    flattened_dict = defaultdict()\n",
+    "    for key in dict_list[0].keys():\n",
+    "        flattened_dict[key] = []\n",
+    "    for dictionary in dict_list:\n",
+    "        for key, value in dictionary.items():\n",
+    "            flattened_dict[key].append(value)\n",
+    "    return flattened_dict\n",
+    "\n",
+    "def recommend_songs(song_list, spotify_data, n_songs=10):\n",
+    "    metadata_cols = ['trackname', 'year', 'artists']\n",
+    "    song_dict = flatten_dict_list(song_list)\n",
+    "    song_center = get_mean_vector(song_list, spotify_data)\n",
+    "    scaler = song_cluster_pipeline.steps[0][1]\n",
+    "    scaled_data = scaler.transform(spotify_data[numeric_columns])\n",
+    "    scaled_song_center = scaler.transform(song_center.reshape(1, -1))\n",
+    "    distances = cdist(scaled_song_center, scaled_data, 'cosine')\n",
+    "    index = list(np.argsort(distances)[:, :n_songs][0])\n",
+    "    rec_songs = spotify_data.iloc[index]\n",
+    "    rec_songs = rec_songs[~rec_songs['trackname'].isin(song_dict['trackname'])]\n",
+    "    return rec_songs[metadata_cols].to_dict(orient='records')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The random recommended playlist is: tove's spamlista (okok)\n"
+      "Song: Crouching Tiger, Hidden Dragon\n",
+      "Artist: Tan Dun, Yo-Yo Ma, Chen Xie Yang, Shanghai Symphony Orchestra, Shanghai National Orchestra\n",
+      "Playlist: Everything at once\n",
+      "---------------------------\n",
+      "Song: Ambre\n",
+      "Artist: Nils Frahm\n",
+      "Playlist: Everything at once\n",
+      "---------------------------\n",
+      "Song: Cello Sonata in G Minor, Op. 65: III. Largo\n",
+      "Artist: Frédéric Chopin, Charles Owen, Natalie Clein\n",
+      "Playlist: Everything at once\n",
+      "---------------------------\n",
+      "Song: La\n",
+      "Artist: Nils Frahm\n",
+      "Playlist: December 2013\n",
+      "---------------------------\n",
+      "Song: Thirteen\n",
+      "Artist: C418\n",
+      "Playlist: C418\n",
+      "---------------------------\n",
+      "Song: Moog City\n",
+      "Artist: C418\n",
+      "Playlist: C418\n",
+      "---------------------------\n",
+      "Song: Door Of Our Home\n",
+      "Artist: Goldmund\n",
+      "Playlist: Everything at once\n",
+      "---------------------------\n",
+      "Song: Beacon\n",
+      "Artist: Disasterpeace\n",
+      "Playlist: Chill out\n",
+      "---------------------------\n",
+      "Song: Solar Sailer\n",
+      "Artist: Daft Punk\n",
+      "Playlist: Daft Punk \n",
+      "---------------------------\n",
+      "Song: Solar Sailer\n",
+      "Artist: Daft Punk\n",
+      "Playlist: Daft Punk \n",
+      "---------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tafas\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:493: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommended_songs = recommend_songs([\n",
+    "    {'trackname': \"Air On A G String\", 'year': 2020},\n",
+    "    {'trackname': \"Brandenburg Concerto No.3 in G Major - 1st Movement\", 'year': 2009},\n",
+    "    {'trackname': \"Cello Suite No. 1 in G Major, BWV 1007: Prelude\", 'year': 1983},\n",
+    "    {'trackname': \"Für Elise\", 'year': 2024},\n",
+    "    {'trackname': \"Hungarian Dance No. 5\", 'year': 2010},\n",
+    "    {'trackname': \"Jesu, Joy Of Man's Desiring', BWV 147\", 'year': 2024},\n",
+    "    {'trackname': \"Moonlight Sonata: Adagio Sostenuto\", 'year': 2007},\n",
+    "    {'trackname': \"Overture (Suite) No. 3 in D Major, BWV 1068: II: Air on a G String\", 'year': 2006},\n",
+    "    {'trackname': \"Piano Sonata No. 11 in A major, K. 331: III. Rondo alla turca\", 'year': 1991},\n",
+    "    {'trackname': \"Piano Sonata No.14 In C Sharp Minor Op.27_2 - 1st Movement 'Moonlight\", 'year': 2020}\n",
+    "], spotify_data)\n",
+    "\n",
+    "\n",
+    "def print_recommendations(recommended_songs, spotify_data):\n",
+    "    for song in recommended_songs:\n",
+    "        track_name = song['trackname']\n",
+    "        artist = song['artists']\n",
+    "        playlist_name = spotify_data[spotify_data['trackname'] == track_name]['playlistname'].iloc[0]\n",
+    "        print(f\"Song: {track_name}\")\n",
+    "        print(f\"Artist: {artist}\")\n",
+    "        print(f\"Playlist: {playlist_name}\")\n",
+    "        print(\"---------------------------\")\n",
+    "\n",
+    "print_recommendations(recommended_songs, spotify_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Créer un modèle de recommandation aléatoire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_random_playlist(spotify_data):\n",
+    "    random_playlist = random.choice(spotify_data['playlistname'].unique())\n",
+    "    random_playlist_distribution = playlist_cluster_distribution.loc[random_playlist].values\n",
+    "    # ...\n",
+    "    return random_playlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The random recommended playlist is: Starred07f0fc3be95dcd878966b1f9572ff670\n"
      ]
     }
    ],
@@ -14957,7 +15109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
