--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -304,8 +304,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = 'a390c89e42c947fd806e973ffb0015e6'\n",
-    "client_secret = 'e2d01d5846e44084923d09afac2ef3a1'\n",
+    "client_id = 'id'\n",
+    "client_secret = 'secret'\n",
     "redirect_uri = 'http://localhost:8888/callback'\n",
     "\n",
     "spotify_client = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id=client_id, client_secret=client_secret, redirect_uri=redirect_uri, scope='user-library-read'))"
@@ -838,140 +838,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ajout de la colonne l'URI de la track dans copy_test_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_df.head(1)\n",
-    "\n",
-    "# print(\"colonnes avant : \\n\", test_df.columns)\n",
-    "\n",
-    "# # Ajout une colonne URI\n",
-    "# def get_track_uri(track_name, artist_name, spotify_client):\n",
-    "#     max_length = 100  # Limite de longueur arbitraire pour éviter des requêtes trop longues\n",
-    "#     track_name = track_name[:max_length]\n",
-    "#     artist_name = artist_name[:max_length]\n",
-    "    \n",
-    "#     try:\n",
-    "#         results = spotify_client.search(q=f'track:{track_name} artist:{artist_name}', type='track', limit=1)\n",
-    "#         if results['tracks']['items']:\n",
-    "#             track_uri = results['tracks']['items'][0]['uri']\n",
-    "#             return track_uri\n",
-    "#         else:\n",
-    "#             return None\n",
-    "#     except spotipy.exceptions.SpotifyException as e:\n",
-    "#         print(f\"Spotify error: {e}\")\n",
-    "#         return None\n",
-    "\n",
-    "# # Ajouter une colonne 'uri' contenant les identifiants URI dans copy_test_df\n",
-    "# #test_df['uri'] = test_df.apply(lambda row: get_track_uri(row['trackname'], row['artistname'], spotify_client), axis=1)\n",
-    "\n",
-    "# print(\"colonnes apères : \\n \", test_df.columns)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(test_df.columns)\n",
-    "# test_df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Ajout de la colonne l'URI de la track dans spotify_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spotify_data = pd.read_csv('./data/data.csv.zip')\n",
-    "\n",
-    "# # Data format\n",
-    "# spotify_data['artists'] = spotify_data['artists'].str.replace(\"['\", \"\", regex=False)\n",
-    "# spotify_data['artists'] = spotify_data['artists'].str.replace(\"']\", \"\", regex=False)\n",
-    "# spotify_data['artists'] = spotify_data['artists'].str.replace(\"'\", \"\", regex=False)\n",
-    "\n",
-    "# spotify_data = spotify_data.rename(columns=lambda x: x.strip().replace('\"', ''))\n",
-    "# spotify_data = spotify_data.rename(columns={'name': 'trackname', 'artists': 'artistname'})\n",
-    "\n",
-    "# print(\"taille : \", len(spotify_data))\n",
-    "# print(\"colonnes avant : \\n\", spotify_data.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"taille de spotify_data :\", len(spotify_data))\n",
-    "# print(\"colonnes avant : \\n\", spotify_data.columns)\n",
-    "\n",
-    "# # Déterminer où reprendre le traitement\n",
-    "# output_filename = 'new_spotify_data.csv'\n",
-    "# if os.path.exists(output_filename):\n",
-    "#     processed_data = pd.read_csv(output_filename)\n",
-    "#     processed_uris = processed_data['uri'].dropna().tolist()\n",
-    "#     last_processed_index = len(processed_uris)\n",
-    "# else:\n",
-    "#     last_processed_index = 0\n",
-    "\n",
-    "# print(f\"Reprenant à partir de l'index {last_processed_index}\")\n",
-    "\n",
-    "# # Traiter les données par lots de 10 chansons à partir du dernier point de reprise\n",
-    "# batch_size = 10\n",
-    "# for start in range(last_processed_index, len(spotify_data), batch_size):\n",
-    "#     end = start + batch_size\n",
-    "#     batch = spotify_data.iloc[start:end].copy()\n",
-    "\n",
-    "#     # Ajouter la colonne 'uri' dans le batch\n",
-    "#     batch['uri'] = batch.apply(lambda row: get_track_uri(row['trackname'], row['artistname'], spotify_client), axis=1)\n",
-    "\n",
-    "#     # Enregistrer le batch dans le fichier CSV\n",
-    "#     if start == last_processed_index and start == 0:\n",
-    "#         batch.to_csv(output_filename, index=False, mode='w', header=True)\n",
-    "#     else:\n",
-    "#         batch.to_csv(output_filename, index=False, mode='a', header=False)\n",
-    "\n",
-    "#     print(f\"Processed and saved batch {start} to {end}\")\n",
-    "\n",
-    "# print(\"Le fichier spotify_data_with_uri.csv a été créé avec les URI ajoutés.\")\n",
-    "# print(\"colonnes après : \\n\", spotify_data.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new_spotify_data = pd.read_csv('new_spotify_data.csv')\n",
-    "# data_clean = pd.read_csv('data_clean.csv')\n",
-    "\n",
-    "# # Afficher le nombre de chansons dans le nouveau fichier CSV\n",
-    "# nombre_de_chansons = len(new_spotify_data)\n",
-    "# print(\"Nombre de chansons dans le nouveau CSV :\", nombre_de_chansons)\n",
-    "\n",
-    "# print(\"colonnes après : \\n\", new_spotify_data.columns)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Nettoyage des URIs\n"
    ]
   },
@@ -980,13 +846,6 @@
    "metadata": {},
    "source": [
     "# CHERCHER UN SON EN COMMUN DANS DATA DES PLAYLIST ET L'AUTRE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "à faire"
    ]
   },
   {
