--- a/Recommandation_Model.ipynb
+++ b/Recommandation_Model.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = 'a390c89e42c947fd806e973ffb0015e6'\n",
-    "client_secret = 'e2d01d5846e44084923d09afac2ef3a1'\n",
+    "client_id = 'id'\n",
+    "client_secret = 'secret'\n",
     "redirect_uri = 'http://localhost:8888/callback'\n",
     "\n",
     "spotify_client = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id=client_id, client_secret=client_secret, redirect_uri=redirect_uri, scope='user-library-read playlist-modify-public'))"
